# lemma-corrector

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
src/lemma_corrector/: __init__.py
tests/: test_lemma_corrector.py
