[project]
name = "lemma-corrector"
version = "0.1.0"
description = "Correcting post-lemmatization spelling errors"
readme = "README.md"
authors = [
    { name = "Sergey Kirichenko", email = "whole.white.whale@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
