[project]
name = "lemma-corrector"
version = "0.1.0"
description = "Correcting post-lemmatization spelling errors"
readme = "README.md"
authors = [
    { name = "Sergey Kirichenko", email = "whole.white.whale@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "networkx>=3.6.1",
    "rapidfuzz>=3.14.5",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "ruff>=0.15.20",
]
